--- a/mobile/finalpr/app/build.gradle
+++ b/mobile/finalpr/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
